--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "eject": "0.0.4",
+    "prop-types": "^15.6.1",
     "radium": "^0.24.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
